npmignore, executable script

--- a/env.yml
+++ b/env.yml
@@ -1,8 +1,7 @@
 default:
   # comment
-  val1: "true"
-  val2: "false"
+  default: "true"
 
 dev: 
-  val1: "true"
-  val2: "false"
+  dev: "true"
+  foo: "bar"
