--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "env-profiles",
   "version": "0.1.0",
-  "description": "Switch env profiles quickly",
+  "description": "Dead simple .env profile switching with yaml config",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "bin": "index.js",
+  "author": "David Skrenta <dskrenta@gmail.com> (https://davidskrenta.com)",
   "license": "MIT",
+  "homepage": "https://github.com/dskrenta/env-profiles",
+  "repository": "github:dskrenta/env-profiles",
   "dependencies": {
     "js-yaml": "^4.1.0"
   }
